--- a/app/views/application_partials/_navigation.html.erb
+++ b/app/views/application_partials/_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light navbar-expand-md fixed-top" style="background-color: #ffffff;">
-    <%= link_to "<span>#{image_tag("logo.png", height: 45, border: 0)}</span>".html_safe, root_path, class: "navbar-brand" %>
+    <h5><%= link_to "EXAMPLE CORP.".html_safe, root_path, class: "navbar-brand font-weight-bold" %></h5>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
